# Irminsul

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Irminsul-reference.md  README.md  action.yml  irminsul.toml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: AGENTS.md  CONTRIBUTING.md  GLOSSARY.md  README.md
docs/00-foundation/: INDEX.md  anti-patterns.md  enforcement.md  laws.md  principles.md
docs/10-architecture/: INDEX.md  component-hierarchy.md  layers.md  levels-and-views.md  overview.md  tiers.md  tooling.md
docs/20-components/: INDEX.md  anchors.md  baseline.md  change.md  checks.md  cli.md  config.md  context.md  doc-atom.md  docgraph.md  frontmatter.md  init.md  languages.md  llm.md  mcp-server.md  new-list-regen.md  orient.md  refs.md  render.md  seed.md  status.md  surface.md
docs/30-workflows/: INDEX.md  check-pipeline.md  private-docs.md
docs/40-reference/: INDEX.md  check-registries.md  cli-commands.md  frontmatter-fields.md
docs/50-decisions/: 0001-adopt-irminsul.md  0002-support-fresh-start-init.md  0003-generated-code-reference-surfaces.md  0004-agents-manifest.md  0005-backlinks-and-refs.md  0006-implement-rfc-0015-pib-seed-and-foundation-readiness.md  0007-implement-rfc-0016-agent-lifecycle-protocol.md  0007-implement-rfc-0017-rfc-resolution-check.md  0008-implement-rfc-0017-rfc-resolution-check.md  0009-implement-rfc-0018-decision-followups-and-maintenance-queue.md  0010-implement-rfc-0019-glossary-discipline.md  0011-derive-dont-materialize.md  0012-anchored-prose-claims.md  0013-retire-render-subsystem.md  0014-retire-tier-1-and-reference-layer.md  (+8 more)
tests/: conftest.py  test_baseline.py  test_change_finalize.py  test_change_footprint.py  test_change_impact.py  test_change_migrate.py  test_change_readiness.py  test_change_relations.py  test_change_report.py  test_change_transition.py  test_checks_adr_structure.py  test_checks_anchors.py  test_checks_boundary.py  test_checks_change_binding.py  test_checks_claim_anchor.py  test_checks_command_vocabulary.py  test_checks_coverage.py  test_checks_decision_followups.py  test_checks_decision_updates.py  test_checks_dependency.py  test_checks_doc_reality.py  test_checks_doc_refs.py  test_checks_env.py  test_checks_external_links.py  test_checks_foundation_readiness.py  test_checks_frontmatter.py  test_checks_globs.py  test_checks_glossary.py  test_checks_index_graduation.py  test_checks_inventory_drift.py  test_checks_liar.py  test_checks_links.py  test_checks_llm.py  test_checks_mtime_drift.py  test_checks_orphans.py  test_checks_parent_child.py  test_checks_phantom_layer.py  test_checks_reality.py  test_checks_requirement_grammar.py  test_checks_retired_references.py  (+59 more)
(+407 files in other folders)
